Improve concluding to actualyl delete streams and prevent reconnects
