# api.js
@@ -70,8 +70,8 @@ export async function getStreams(dispatch, errorCallback, router) {
 export async function addStream(body, dispatch, errorCallback, router) {
 	return ApiCall('/forms/stream', 'POST', body, dispatch, errorCallback, router, 0.5);
 }
-export async function concludeStream(body, dispatch, errorCallback, router) {
-	return ApiCall(`/forms/stream/${body.id}/conclude`, 'POST', body, dispatch, errorCallback, router, 0.5);
+export async function toggleStream(body, dispatch, errorCallback, router) {
+	return ApiCall(`/forms/stream/${body.id}/toggle`, 'POST', body, dispatch, errorCallback, router, 0.5);
 }
 export async function deleteStream(body, dispatch, errorCallback, router) {
 	return ApiCall(`/forms/stream/${body.id}`, 'DELETE', body, dispatch, errorCallback, router, 0.5);
